fix: broken CSS code

--- a/src/static/css/local/index.css
+++ b/src/static/css/local/index.css
@@ -1,5 +1,5 @@
 /* This CSS file is used for styling the index page. */
 
-.ssh {
+.name-writer h1 {
     display: flex;
 }
